# ds-editor-lite

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  et --hard 85e1ff9ee41d34ee3375a94371f584aca91523af
src/: CMakeLists.txt  conf.cmake
src/app/: AppContext.cpp  AppContext.h  CMakeLists.txt  main.cpp
src/app/Bootstrap/: AppEnvironment.cpp  AppEnvironment.h  CrashHandler.cpp  CrashHandler.h  LoggingBootstrap.cpp  LoggingBootstrap.h  Restarter.cpp  Restarter.h  StartupArguments.cpp  StartupArguments.h  WindowPlacement.h
src/app/Controller/: AppController.cpp  AppController.h  AppController_p.h  AppOptionsController.cpp  AppOptionsController.h  AudioDecodingController.cpp  AudioDecodingController.h  ClipController.cpp  ClipController.h  ClipController_p.h  ClipEditorViewController.cpp  ClipEditorViewController.h  ClipEditorViewController_p.h  ClipboardController.cpp  ClipboardController.h  ClipboardController_p.h  EditorViewController.cpp  EditorViewController.h  InferController.cpp  InferController.h  InferController_p.h  ModelChangeHandler.cpp  ModelChangeHandler.h  ParamController.cpp  ParamController.h  PieceController.cpp  PieceController.h  PlaybackController.cpp  PlaybackController.h  PlaybackController_p.h  ProjectPackageResolver.cpp  ProjectPackageResolver.h  ProjectStatusController.cpp  ProjectStatusController.h  TrackController.cpp  TrackController.h  TracksViewController.cpp  TracksViewController.h  UndoRedoController.cpp  UndoRedoController.h  (+2 more)
src/app/Global/: AnimationGlobal.h  AppGlobal.h  AppOptionsGlobal.h  ClipEditorGlobal.h  ControllerGlobal.h  PlaybackGlobal.h  SingingClipSlicerGlobal.h  TaskGlobal.h  TracksEditorGlobal.h
src/app/Interface/: EditorViewState.h  HistoryFocus.cpp  HistoryFocus.h  IAtomicAction.h  IClip.h  IClipEditorView.h  IEditorView.h  IHashProvider.h  IInferPiece.h  IMainWindow.h  IModule.h  IPanel.h  ISerializable.h  ITrack.h
src/app/Model/: AppModel.cpp  AppModel.h  AppModel_p.h  AppStatus.cpp  AppStatus.h  AudioInfoModel.h  Clip.cpp  Clip.h  Curve.cpp  Curve.h  Note.cpp  Note.h  Params.cpp  Params.h  TimeSignature.h  Track.cpp  Track.h  TrackControl.h  WorkspaceEditor.cpp  WorkspaceEditor.h
src/app/Resources/: lite_res.qrc
src/app/Utils/: AppModelUtils.cpp  AppModelUtils.h  BitMaskFlag.h  ConditionalTransition.cpp  ConditionalTransition.h  Decibellinearizer.h  DiffscopeAudioWorkspace.cpp  DiffscopeAudioWorkspace.h  Expected.h  FontManager.cpp  FontManager.h  G2pUtil.h  IOverlapable.h  ISelectable.h  IdGenerator.cpp  IdGenerator.h  JsonUtils.h  Linq.h  Log.cpp  Log.h  LogBus.cpp  LogBus.h  Logger.cpp  Logger.h  MacOSUtils.cpp  MacOSUtils.h  Macros.h  MathUtils.h  MusicTimeConverter.cpp  MusicTimeConverter.h  NoteUtils.h  OverlapableSerialList.h  Overlappable.h  OverlappableSerialList.h  ParamUtils.cpp  ParamUtils.h  Property.h  QSingleton.h  Queue.h  Singleton.h  (+11 more)
src/gui/: CMakeLists.txt  Controller.cpp  Controller.h  main.cpp
src/gui/Audio/: AudioContext.cpp  AudioContext.h  AudioExporter.cpp  AudioExporter.h  AudioSystem.cpp  AudioSystem.h
src/gui/Controller/: AppController.cpp  AppController.h  ClipEditorViewController.cpp  ClipEditorViewController.h  ClipboardController.cpp  ControllerGlobal.h  PianoRollViewController.cpp  PianoRollViewController.h  PlaybackController.cpp  PlaybackController.h  TracksViewController.cpp  TracksViewController.h
src/gui/Controls/: Button.cpp  Button.h  ComboBox.cpp  ComboBox.h  EditLabel.cpp  LevelMeter.cpp  LineEdit.cpp  LineEdit.h  ProgressIndicator.cpp  ProgressIndicator.h  SeekBar.cpp  SwitchButton.cpp  SwitchButton.h  ToolTip.cpp  ToolTip.h  ToolTipFilter.h
src/gui/Model/: AppModel.cpp  AppModel.h  Clip.cpp  Clip.h  Curve.cpp  Curve.h  DsAudioClip.cpp  DsClip.cpp  DsClip.h  DsCurve.cpp  DsCurve.h  DsModel.h  DsNote.cpp  DsNote.h  DsParams.h  DsTrack.cpp  DsTrack.h  DsTrackControl.h  Note.cpp  Note.h  Params.cpp  Params.h  Track.cpp  Track.h  TrackControl.cpp  WorkspaceEditor.cpp
src/gui/Resources/: lite_res.qrc
src/gui/Utils/: AppGlobal.h  IComparable.h  IOverlapable.h  ISelectable.h  IUnique.h  IdGenerator.h  OverlapableSerialList.h  QSingleton.h  SerialList.h  Singleton.h  TimeUtils.cpp  TimeUtils.h  UniqueObject.h  WindowFrameUtils.cpp  WindowFrameUtils.h  logMessageHandler.h
src/gui/Views/: ActionButtonsView.cpp  ActionButtonsView.h  ClipEditorToolBarView.cpp  ClipEditorToolBarView.h  ClipEditorView.cpp  ClipEditorView.h  PlaybackView.cpp  PlaybackView.h  TrackListHeaderView.cpp  TracksView.cpp  TracksView.cpp~  TracksView.h
src/gui/Window/: MainWindow.cpp  MainWindow.h
src/gui/res/: lite_res.qrc
src/libs/: CMakeLists.txt
src/libs/ADT/: CMakeLists.txt  Expected.h  OverlappableSerialList.h  Property.h
src/libs/LangMgr/: CMakeLists.txt  LangMgrConfig.cmake.in
src/libs/Support/: CMakeLists.txt  Log.cpp  Log.h  SystemUtils.h  VersionUtils.cpp  VersionUtils.h
src/libs/audio-util/: CMakeLists.txt
src/libs/curve-util/: CMakeLists.txt  curve-utilConfig.cmake.in
src/libs/game-infer/: CMakeLists.txt
src/libs/rmvpe-infer/: CMakeLists.txt
src/libs/some-infer/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/AnchoredCurve/: anchoredcurve.cpp  anchoredcurve.h
src/tests/TestAnchoredCurve/: AnchorCurve.cpp  AnchorCurve.h  CMakeLists.txt  TestAnchorEditor.cpp  TestAnchorEditor.h  anchoredcurve.cpp  anchoredcurve.h  main.cpp
src/tests/TestComparable/: CMakeLists.txt  TestTimeObject.h  main.cpp
src/tests/TestDocumentWorkflow/: CMakeLists.txt  main.cpp
src/tests/TestEdgeAutoScroll/: CMakeLists.txt  main.cpp
src/tests/TestEditorViewController/: CMakeLists.txt  main.cpp
src/tests/TestElasticAnimation/: AnimationView.cpp  AnimationView.h  CMakeLists.txt  ElasticAnimator.cpp  ElasticAnimator.h  main.cpp
src/tests/TestExpected/: CMakeLists.txt  main.cpp
src/tests/TestFillLyric/: CMakeLists.txt  PhonicDelegate.h  PhonicModel.cpp  PhonicModel.h  PhonicWidget.cpp  PhonicWidget.h  SyllableDelegate.cpp  SyllableDelegate.h  main.cpp
src/tests/TestHistoryManager/: Note.h  (+11 more)
src/tools/: CMakeLists.txt
(+1909 files in other folders)
