# Tests recompile app source directly (no Model library to link yet), so they
# inherit the app's transitive <lite/...> includes. Expose the sync_include root
# for the whole test tree here rather than linking each lib into every test.
include_directories(${LITE_BUILD_INCLUDE_DIR})

#add_subdirectory(TestAnchoredCurve)
add_subdirectory(TestElasticAnimation)
add_subdirectory(TestExpected)
add_subdirectory(TestSpeakerMix)
add_subdirectory(TestDocumentWorkflow)
add_subdirectory(TestStateMachine)
#add_subdirectory(TestParamEdit)
#add_subdirectory(TestTaskManager)
#add_subdirectory(TestNewStyle)
#add_subdirectory(TestOpenGLWidget)
add_subdirectory(TestInsertTable)
add_subdirectory(TestInputConversion)
add_subdirectory(TestSpeakerMixValidation)
add_subdirectory(TestVoiceContext)
add_subdirectory(TestUiLanguage)
add_subdirectory(TestEdgeAutoScroll)
add_subdirectory(TestThemeColors)
add_subdirectory(TestThemeIcons)
add_subdirectory(TestEditorViewController)
add_subdirectory(TestUndoRedoController)
add_subdirectory(TestOverlaySplitter)
